...
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/img_ic_now_playing"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:contentDescription="@string/img_dsc_now_playing_right_icon"
                        android:onClick="setFragmentToNowPlayingMovie"
...

                        </androidx.cardview.widget.CardView>

                    </io.supercharge.shimmerlayout.ShimmerLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_now_playing"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="4dp"
                        app:layout_constraintEnd_toEndOf="parent"
...
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/shimmer_text1" />

                    <ImageView
                        android:id="@+id/img_ic_upcoming"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:contentDescription="@string/img_dsc_now_playing_right_icon"
                        android:onClick="setFragmentToUpcomingMovie"
                        app:layout_constraintEnd_toEndOf="parent"
...

                        </androidx.cardview.widget.CardView>

                    </io.supercharge.shimmerlayout.ShimmerLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_upcoming"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="30dp"
                        android:layout_marginEnd="4dp"
                        app:layout_constraintEnd_toEndOf="parent"
...
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/shimmer_text4" />

                    <ImageView
                        android:id="@+id/img_ic_top_rated"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:contentDescription="@string/img_dsc_now_playing_right_icon"
                        android:onClick="setFragmentToTopRatedMovie"
                        app:layout_constraintEnd_toEndOf="parent"
...

                        </androidx.cardview.widget.CardView>

                    </io.supercharge.shimmerlayout.ShimmerLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_top"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="30dp"
                        android:layout_marginEnd="4dp"
                        android:layout_marginBottom="50dp"
...
