<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data class="TVShowDetailBinding"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.movie.detail.MovieDetailActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <io.supercharge.shimmerlayout.ShimmerLayout
                android:id="@+id/shimmer_text1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shimmer_animation_duration="500">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="400dp"
                    android:scaleType="fitXY"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                </androidx.cardview.widget.CardView>

            </io.supercharge.shimmerlayout.ShimmerLayout>

            <ImageView
                android:id="@+id/img_poster"
                android:layout_width="0dp"
                android:layout_height="600dp"
                android:contentDescription="@string/img_desc_detail_poster"
                android:scaleType="fitXY"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/poster_alita" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="250dp"
                app:cardBackgroundColor="#00FFFFFF"
                app:cardElevation="0dp"
                app:cardMaxElevation="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/gradient_color">

                    <io.supercharge.shimmerlayout.ShimmerLayout
                        android:id="@+id/shimmer_text2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toTopOf="@+id/tv_title"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:shimmer_animation_duration="500">

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="25dp"
                            android:layout_marginStart="24dp"
                            android:layout_marginEnd="24dp"
                            android:layout_marginBottom="8dp"
                            android:background="@color/colorText"
                            android:textColor="#FFFFFF" />

                    </io.supercharge.shimmerlayout.ShimmerLayout>

                    <io.supercharge.shimmerlayout.ShimmerLayout
                        android:id="@+id/shimmer_text3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="@+id/tv_title"
                        app:layout_constraintTop_toBottomOf="@+id/shimmer_text2"
                        app:shimmer_animation_duration="500">

                        <View
                            android:layout_width="100dp"
                            android:layout_height="20dp"
                            android:background="@color/colorText"
                            android:textColor="#FFFFFF" />

                    </io.supercharge.shimmerlayout.ShimmerLayout>

                    <io.supercharge.shimmerlayout.ShimmerLayout
                        android:id="@+id/shimmer_text4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        app:layout_constraintEnd_toEndOf="@+id/tv_title"
                        app:layout_constraintStart_toStartOf="@+id/tv_title"
                        app:layout_constraintTop_toBottomOf="@+id/shimmer_text3"
                        app:shimmer_animation_duration="500">

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_marginStart="24dp"
                            android:layout_marginEnd="24dp"
                            android:background="@color/colorText"
                            android:textColor="#FFFFFF" />

                    </io.supercharge.shimmerlayout.ShimmerLayout>

                    <io.supercharge.shimmerlayout.ShimmerLayout
                        android:id="@+id/shimmer_text5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        app:layout_constraintEnd_toEndOf="@+id/tv_title"
                        app:layout_constraintStart_toStartOf="@+id/tv_title"
                        app:layout_constraintTop_toBottomOf="@+id/shimmer_text4"
                        app:shimmer_animation_duration="500">

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="25dp"
                            android:layout_marginStart="24dp"
                            android:layout_marginEnd="24dp"
                            android:background="@color/colorText"
                            android:textColor="#FFFFFF" />

                    </io.supercharge.shimmerlayout.ShimmerLayout>

                    <TextView
                        android:id="@+id/tv_title"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginEnd="24dp"
                        android:layout_marginBottom="8dp"
                        android:textColor="#FFFFFF"
                        android:textSize="30sp"
                        app:layout_constraintBottom_toTopOf="@+id/tv_date"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        tools:text="Alita Battle Angel" />

                    <TextView
                        android:id="@+id/tv_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:textColor="#FFFFFF"
                        app:layout_constraintBottom_toTopOf="@+id/tv_desc"
                        app:layout_constraintStart_toStartOf="@+id/tv_title"
                        tools:text="23 Oktober 2019" />

                    <Button
                        android:id="@+id/btn_favorite"
                        android:layout_width="0dp"
                        android:layout_height="30dp"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/btn_round"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        tools:text="Unfavorite"
                        android:visibility="invisible"
                        android:textColor="@color/colorText"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="@+id/tv_desc"
                        app:layout_constraintStart_toStartOf="@+id/tv_desc"
                        app:layout_constraintTop_toBottomOf="@+id/tv_desc" />

                    <TextView
                        android:id="@+id/tv_desc"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="50dp"
                        android:textColor="#FFFFFF"
                        android:textSize="13sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@+id/tv_title"
                        app:layout_constraintStart_toStartOf="@+id/tv_title"
                        tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum." />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>