<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_movie"
        android:icon="@drawable/ic_movie_yellow"
        android:name="@string/title_movie"
        android:title="@string/title_movie" />

    <item
        android:id="@+id/navigation_tvshow"
        android:icon="@drawable/ic_live_tv_yellow"
        android:name="@string/title_tvshow"
        android:title="@string/title_tvshow" />

    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/ic_favorite"
        android:name="@string/title_favorite"
        android:title="@string/title_favorite" />

</menu>
